# cppautograd

./: .gitignore  README.md
cmake/: CMakeLists.txt
demo/: digit_classification.cpp  multithreadding_digit_classification.cpp  tutorial.cpp
demo/data/: mnist_dataset.h
grad/: CMakeLists.txt  activation_functions.cpp  backward.cpp  cppgrad.cpp  cppgrad.h  initialization_functions.cpp  loss_functions.cpp  matmul.cpp  modules.h  operator_overloads.cpp  reduction_operators.cpp  unary_operators.cpp  util.cpp
performance_evals/: eval.cpp  matmul.cpp  timer.h
tests/: backard.cpp  backward.cpp  digit_classification.cpp  gradients.py  linear.cpp  unit_tests.cpp  unit_tests.h
tests/test_functions/: multidim_test.cpp  reduction_test.cpp  scalar_test.cpp
vanilla/: CMakeLists.txt  cppgrad.cpp  cppgrad.h  main.cpp  modules.h
